exports[`ScrollToBottomButton component basic renders properly 1`] = `
<div
  className="scroll-to-bottom-container">
  <button
    className="scroll-to-bottom-button"
    onClick={undefined}>
    <span
      className="scroll-to-bottom-icon" />
  </button>
</div>
`;

exports[`ScrollToBottomButton component with text renders properly 1`] = `
<div
  className="scroll-to-bottom-container">
  <button
    className="scroll-to-bottom-button"
    onClick={undefined}>
    <span
      className="scroll-to-bottom-label">
      Test Label
    </span>
    <span
      className="scroll-to-bottom-icon" />
  </button>
</div>
`;
